# zally

./: .gitignore  0  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml
.config/: nextest.toml
crates/zally-chain/: Cargo.toml
crates/zally-chain/src/: buffered_block_source.rs  buffered_source.rs  chain_error.rs  chain_source.rs  error.rs  lib.rs  source.rs  submitter.rs  transaction.rs  zinder_chain_source.rs  zinder_source.rs  zinder_submitter.rs
crates/zally-chain/tests/: live_zinder_chain_source.rs  live_zinder_source.rs
crates/zally-core/: Cargo.toml
crates/zally-core/src/: account_id.rs  base64_bytes.rs  block_hash.rs  block_height.rs  branch_id.rs  canonicalizer.rs  failure_posture.rs  hash_hex.rs  hold_id.rs  idempotency_key.rs  intent_hash.rs  lib.rs  memo.rs  network.rs  outpoint.rs  payment_recipient.rs  receiver_purpose.rs  reservation_id.rs  signed_payload.rs  transparent_gap.rs  txid.rs  wallet_scan.rs  zatoshis.rs
crates/zally-keys/: Cargo.toml
crates/zally-keys/src/: age_file_sealing.rs  lib.rs  mnemonic.rs  plaintext_sealing.rs  sealing.rs  seed_material.rs  ufvk.rs
crates/zally-pczt/: Cargo.toml
crates/zally-pczt/src/: bytes.rs  combiner.rs  creator.rs  disclosure.rs  error.rs  extractor.rs  lib.rs  pczt_bytes.rs  pczt_error.rs  prover.rs  signer.rs  updater.rs
crates/zally-pczt/tests/: payment_disclosure_export.rs
crates/zally-storage/: Cargo.toml
crates/zally-storage/src/: account_balance_row.rs  dispense_reservation_row.rs  error.rs  exposed_address_row.rs  filtered_wallet_db.rs  hold_row.rs  lib.rs  pending_broadcast_input_row.rs  sqlite.rs  storage_error.rs  v5_parse.rs  wallet.rs  wallet_storage.rs
crates/zally-storage/tests/: chain_state_anchor_round_trip.rs  chain_tips_record_regress.rs  commitment_tree_roots_regress.rs  dispense_reservation_round_trip.rs  finalized_pczt_lookup.rs  hold_round_trip.rs  idempotency_ledger_round_trip.rs  list_shielded_receives_round_trip.rs  list_unspent_shielded_notes_round_trip.rs  observed_tip_records_regress.rs  recreate_with_account_round_trip.rs  shielding_destination_pool.rs  shielding_excludes_pending_broadcast.rs  transparent_utxo_round_trip.rs  tx_ids_mined_in_range_round_trip.rs
crates/zally-storage/tests/fixtures/: sapling_proving_parameters.rs  scan_artifact.rs  treestate_4009899.json  treestate_4009949.json  treestate_4009999.json
crates/zally-testkit/: Cargo.toml
crates/zally-testkit/src/: in_memory_sealing.rs  lib.rs  live.rs  mock_chain_source.rs  mock_submitter.rs  temp_wallet_path.rs
crates/zally-wallet/: Cargo.toml
crates/zally-wallet/examples/custody-with-pczt/: main.rs
crates/zally-wallet/examples/e2e-ironwood-probe/: main.rs
crates/zally-wallet/examples/e2e-seeded-probe/: main.rs
crates/zally-wallet/examples/exchange-deposit/: main.rs
crates/zally-wallet/examples/live-zinder-probe/: main.rs
crates/zally-wallet/examples/mining-payout/: main.rs
crates/zally-wallet/examples/open-wallet/: main.rs
crates/zally-wallet/examples/payment-processor/: main.rs
crates/zally-wallet/src/: account_balance.rs  capabilities.rs  circuit_breaker.rs  disclosure.rs  error.rs  event.rs  exposed_address.rs  hold.rs  lib.rs  metrics.rs  options.rs  pczt.rs  pending_transparent_inputs.rs  received_note.rs  reservation.rs  retry.rs  spend.rs  status.rs  sync.rs  unspent_note.rs  wallet.rs  wallet_error.rs
crates/zally-wallet/tests/: acceptance.rs
crates/zally-wallet/tests/integration/: capabilities_reports.rs  capabilities_reports_slice_1.rs  circuit_breaker_opens_after_threshold.rs  create_then_create_returns_already_exists.rs  create_then_open_round_trip.rs  create_then_open_round_trip_in_memory.rs  derive_address_populates_transparent.rs  export_payment_disclosure_requires_retained_pczt.rs  fixtures.rs  get_account_balance_round_trip.rs  list_exposed_addresses_round_trip.rs  list_unspent_shielded_notes_round_trip.rs  metrics_snapshot_round_trip.rs  mod.rs  network_mismatch_fails_closed.rs  observe_emits_scan_progress.rs  open_or_create_account_round_trip.rs  open_or_restore_round_trip.rs  open_without_seal_returns_no_sealed_seed.rs  pending_transparent_inputs_round_trip.rs  propose_rejects_memo_on_transparent.rs  propose_rejects_network_mismatch.rs  reserve_for_dispense_round_trip.rs  reserve_hold_round_trip.rs  send_payment_rejects_stale_target_expiry.rs  send_payment_short_circuits_on_known_idempotency_key.rs  sync_catches_up_to_tip.rs  sync_driver_follows_chain.rs  sync_driver_self_heals.rs  sync_driver_slow_progress.rs  sync_emits_reorg_when_tip_regresses.rs  sync_network_mismatch.rs  sync_retries_retryable_chain_failures.rs  sync_skips_tree_root_check_for_empty_pools.rs  sync_stops_at_finalized_height.rs  to_uri_round_trips_through_propose.rs  unsafe_plaintext_seed_warns.rs
crates/zally-wallet/tests/live/: funded_zinder_round_trip.rs  mod.rs  orchard_root_converges_from_legacy_birthday.rs
crates/zcash-payment-disclosure/: Cargo.toml  README.md
crates/zcash-payment-disclosure/src/: codec.rs  lib.rs  produce.rs  verify.rs
crates/zcash-payment-disclosure/tests/: draft1_codec.rs  real_sapling.rs  sapling_producer.rs  sapling_verifier_api.rs
docs/: README.md  prd-0001-zally-headless-wallet-library.md
docs/adrs/: 0001-workspace-crate-boundaries.md  0001-zinder-only-chain-source.md  0002-founding-implementation-patterns.md  0002-implementation-patterns.md  0002-source-failure-posture.md  0003-dispense-reservations.md  0003-embeddable-wallet-operations.md  0004-rpc-byte-order-hex-conversion.md  0005-chain-state-anchor-cache.md  0005-wallet-sync-resume-anchor-cadence.md  0006-librustzcash-ironwood-version-floor.md  0007-payment-disclosure-incubation.md
docs/architecture/: operational-surfaces.md  public-interfaces.md
docs/proposals/: 0001-wallet-read-surface-for-fauzec-auto-shield.md  0002-pending-broadcast-awareness-for-shielding-input-selector.md
docs/reference/: error-vocabulary.md  v1-follow-up.md
docs/rfcs/: 0001-slice-1-open-wallet.md  0002-slice-2-chain-and-sync.md  0003-slice-3-spend.md  0004-slice-4-pczt.md  (+1 more)
(+4 files in other folders)
