[workspace]
resolver = "3"
members = [
    "crates/zally-core",
    "crates/zally-keys",
    "crates/zally-storage",
    "crates/zally-chain",
    "crates/zally-pczt",
    "crates/zally-wallet",
    "crates/zally-testkit",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/gustavovalverde/zally"
authors = []
readme = "README.md"
keywords = ["zcash", "wallet", "cryptocurrency", "shielded", "headless"]
categories = ["cryptography::cryptocurrencies"]

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"
missing_docs = "deny"
unreachable_pub = "deny"
unnameable_types = "deny"
unused_must_use = "deny"
trivial_numeric_casts = "deny"
unused_extern_crates = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
wildcard_enum_match_arm = "deny"
allow_attributes_without_reason = "deny"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
redundant_pub_crate = "allow"

[workspace.dependencies]
# Foundation: librustzcash crates. Pin minor versions; bump deliberately in a
# dedicated ADR. Zally absorbs the upstream churn behind its own surface;
# operators do not see these version numbers in Zally's public API.
zcash_client_backend = "0.23"
zcash_client_sqlite = "0.21"
zcash_keys = "0.15.0-pre.0"
zcash_primitives = "0.29.0-pre.0"
zcash_protocol = { version = "0.10.0-pre.0", features = ["local-consensus"] }
zcash_address = "0.13.0-pre.0"
zcash_proofs = "0.29.0-pre.0"
zcash_transparent = { version = "0.9.0-pre.0", default-features = false, features = ["transparent-inputs"] }
zcash_script = "0.4"
pczt = { version = "0.7", features = ["orchard", "sapling", "transparent", "signer", "prover", "tx-extractor"] }
secp256k1 = "0.29"
orchard = "0.15.0-pre.1"
sapling = { package = "sapling-crypto", version = "0.7" }
zip321 = "0.8"
zip32 = "0.2"
shardtree = "0.6"
incrementalmerkletree = "0.8"

# Optional chain-plane backend. The `zinder` cargo feature on zally-chain pulls these
# crates from a pinned git revision so the wallet integration tracks the zinder typed-
# client surface directly.
zinder-client = { git = "https://github.com/gustavovalverde/zinder", rev = "74abb4b8f708dfb511c5f301c3d59f2127a5e2ed" }
zinder-core = { git = "https://github.com/gustavovalverde/zinder", rev = "74abb4b8f708dfb511c5f301c3d59f2127a5e2ed" }
zinder-testkit = { git = "https://github.com/gustavovalverde/zinder", rev = "74abb4b8f708dfb511c5f301c3d59f2127a5e2ed" }

# Async runtime and concurrency.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-trait = "0.1"
parking_lot = "0.12"

# Error handling and serialization.
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }

# Identifiers and BIP-39 mnemonics.
uuid = { version = "1", features = ["v4", "serde"] }
bip0039 = { version = "0.12", features = ["all-languages"] }

# Hex encoding for canonical hash text (`TxId`, `BlockHash`).
hex = "0.4"

# Cryptography and key sealing.
age = "0.10"
secrecy = "0.8"
zeroize = "1.8"
rand = "0.8"

# Storage.
rusqlite = { version = "0.37", features = ["bundled"] }

# Telemetry.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Test infrastructure.
proptest = "1.5"
tempfile = "3.13"


# Pinned to a fork of the librustzcash workspace tracking the unreleased
# Ironwood/NU6.3 dependency family, carrying two patches on top of upstream
# main: the `target_expiry_height` argument added to `create_pczt_from_proposal`
# (matches https://github.com/zcash/librustzcash/pull/2412) and wallet
# scanning/storage support for the Ironwood shielded pool (matches
# https://github.com/zcash/librustzcash/pull/2539, cherry-picked on top; that
# PR is open and unmerged). Every librustzcash-internal crate Zally
# references, directly or transitively, is patched from this same commit:
# they resolve each other by intra-workspace path inside the fork's checkout,
# so patching a subset from a different source would give Zally's crates and
# the fork's own internal crates distinct, incompatible types for the same
# dependency. `zcash_encoding` and `equihash` are not zally-direct
# dependencies but are patched for the same reason: `cargo tree -d` must show
# zero duplicate sources across the whole family. See ADR-0006. Drop once
# upstream ships a stable `zcash_client_backend` release carrying both
# patches.
[patch.crates-io]
zcash_client_backend = { git = "https://github.com/gustavovalverde/librustzcash.git", rev = "235d581f2c6eface19e857e69e9bfa4765c2d4bf" }
zcash_client_sqlite = { git = "https://github.com/gustavovalverde/librustzcash.git", rev = "235d581f2c6eface19e857e69e9bfa4765c2d4bf" }
pczt = { git = "https://github.com/gustavovalverde/librustzcash.git", rev = "235d581f2c6eface19e857e69e9bfa4765c2d4bf" }
zcash_protocol = { git = "https://github.com/gustavovalverde/librustzcash.git", rev = "235d581f2c6eface19e857e69e9bfa4765c2d4bf" }
zcash_primitives = { git = "https://github.com/gustavovalverde/librustzcash.git", rev = "235d581f2c6eface19e857e69e9bfa4765c2d4bf" }
zcash_keys = { git = "https://github.com/gustavovalverde/librustzcash.git", rev = "235d581f2c6eface19e857e69e9bfa4765c2d4bf" }
zcash_address = { git = "https://github.com/gustavovalverde/librustzcash.git", rev = "235d581f2c6eface19e857e69e9bfa4765c2d4bf" }
zcash_transparent = { git = "https://github.com/gustavovalverde/librustzcash.git", rev = "235d581f2c6eface19e857e69e9bfa4765c2d4bf" }
zcash_proofs = { git = "https://github.com/gustavovalverde/librustzcash.git", rev = "235d581f2c6eface19e857e69e9bfa4765c2d4bf" }
zip321 = { git = "https://github.com/gustavovalverde/librustzcash.git", rev = "235d581f2c6eface19e857e69e9bfa4765c2d4bf" }
zcash_encoding = { git = "https://github.com/gustavovalverde/librustzcash.git", rev = "235d581f2c6eface19e857e69e9bfa4765c2d4bf" }
equihash = { git = "https://github.com/gustavovalverde/librustzcash.git", rev = "235d581f2c6eface19e857e69e9bfa4765c2d4bf" }
