[workspace]
resolver = "3"
members = [
    "crates/zally-core",
    "crates/zally-keys",
    "crates/zally-storage",
    "crates/zally-chain",
    "crates/zally-pczt",
    "crates/zally-wallet",
    "crates/zally-testkit",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/gustavovalverde/zally"
authors = []
readme = "README.md"
keywords = ["zcash", "wallet", "cryptocurrency", "shielded", "headless"]
categories = ["cryptography::cryptocurrencies"]

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"
missing_docs = "deny"
unreachable_pub = "deny"
unnameable_types = "deny"
unused_must_use = "deny"
trivial_numeric_casts = "deny"
unused_extern_crates = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
wildcard_enum_match_arm = "deny"
allow_attributes_without_reason = "deny"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
redundant_pub_crate = "allow"

[workspace.dependencies]
# Foundation: librustzcash crates. Pin minor versions; bump deliberately in a
# dedicated ADR. Zally absorbs the upstream churn behind its own surface;
# operators do not see these version numbers in Zally's public API.
zcash_client_backend = "0.23"
zcash_client_sqlite = "0.21"
zcash_keys = "0.15.0-pre.0"
zcash_primitives = "0.29.0-pre.0"
zcash_protocol = { version = "0.10.0-pre.0", features = ["local-consensus"] }
zcash_address = "0.13.0-pre.0"
zcash_proofs = "0.29.0-pre.0"
zcash_transparent = { version = "0.9.0-pre.0", default-features = false, features = ["transparent-inputs"] }
zcash_script = "0.4"
pczt = { version = "0.7", features = ["orchard", "sapling", "transparent", "signer", "prover", "tx-extractor"] }
secp256k1 = "0.29"
orchard = "0.15.0-pre.2"
sapling = { package = "sapling-crypto", version = "0.7" }
zip321 = "0.8"
zip32 = "0.2"
shardtree = "0.6"
incrementalmerkletree = "0.8"

# Optional chain-plane backend. The `zinder` cargo feature on zally-chain pulls these
# crates from a pinned git revision so the wallet integration tracks the zinder typed-
# client surface directly.
zinder-client = { version = "0.1", git = "https://github.com/gustavovalverde/zinder", rev = "c604ac3d260b4e65219dbeb6062d01d213d65ea9" }
zinder-core = { version = "0.1", git = "https://github.com/gustavovalverde/zinder", rev = "c604ac3d260b4e65219dbeb6062d01d213d65ea9" }
zinder-testkit = { version = "0.1", git = "https://github.com/gustavovalverde/zinder", rev = "c604ac3d260b4e65219dbeb6062d01d213d65ea9" }

# Async runtime and concurrency.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-trait = "0.1"
parking_lot = "0.12"

# Error handling and serialization.
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }

# Identifiers and BIP-39 mnemonics.
uuid = { version = "1", features = ["v4", "serde"] }
bip0039 = { version = "0.12", features = ["all-languages"] }

# Hex encoding for canonical hash text (`TxId`, `BlockHash`).
hex = "0.4"

# Cryptography and key sealing.
age = "0.10"
secrecy = "0.8"
zeroize = "1.8"
rand = "0.8"

# Storage.
rusqlite = { version = "0.37", features = ["bundled"] }

# Telemetry.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Test infrastructure.
proptest = "1.5"
tempfile = "3.13"


# Pinned to an unreleased librustzcash commit that carries the Ironwood/NU6.3
# dependency family, target-expiry PCZT construction, and Ironwood wallet
# scanning/storage support. Every librustzcash-internal crate Zally references,
# directly or transitively, is patched from this same commit: they resolve each
# other by intra-workspace path inside the checkout, so patching a subset from a
# different source would give Zally's crates and the upstream internal crates
# distinct, incompatible types for the same dependency. `zcash_encoding` and
# `equihash` are not zally-direct dependencies but are patched for the same
# reason: `cargo tree -d` must show zero duplicate sources across the whole
# family. See ADR-0006. Drop once upstream ships a stable
# `zcash_client_backend` release carrying these APIs. The Orchard patch mirrors
# librustzcash's own temporary patch for the bundle-type APIs required by the
# pinned commit.
[patch.crates-io]
orchard = { git = "https://github.com/zcash/orchard", rev = "475ef0ff77d45aebff93cb039d639250d82518a3" }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
pczt = { git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_transparent = { git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zip321 = { git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_encoding = { git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
equihash = { git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
# Carries the anchor-retention shardtree APIs, retained-checkpoint pruning fix,
# and exact checkpoint truncation fix until those fixes are released upstream.
shardtree = { git = "https://github.com/gustavovalverde/incrementalmerkletree", rev = "48b5297872f9c321e7d7e65b803132362035c4ee" }
incrementalmerkletree = { git = "https://github.com/gustavovalverde/incrementalmerkletree", rev = "48b5297872f9c321e7d7e65b803132362035c4ee" }
