[workspace]
resolver = "3"
members = [
    "crates/zcash-payment-disclosure",
    "crates/zally-core",
    "crates/zally-keys",
    "crates/zally-storage",
    "crates/zally-chain",
    "crates/zally-pczt",
    "crates/zally-wallet",
    "crates/zally-testkit",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/gustavovalverde/zally"
authors = []
readme = "README.md"
keywords = ["zcash", "wallet", "cryptocurrency", "shielded", "headless"]
categories = ["cryptography::cryptocurrencies"]

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"
missing_docs = "deny"
unreachable_pub = "deny"
unnameable_types = "deny"
unused_must_use = "deny"
trivial_numeric_casts = "deny"
unused_extern_crates = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
wildcard_enum_match_arm = "deny"
allow_attributes_without_reason = "deny"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
redundant_pub_crate = "allow"

[workspace.dependencies]
# Foundation: librustzcash crates. Pin minor versions; bump deliberately in a
# dedicated ADR. Zally absorbs the upstream churn behind its own surface;
# operators do not see these version numbers in Zally's public API.
zcash_client_backend = { version = "0.23", git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_client_sqlite = { version = "0.21", git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_keys = { version = "0.15.0-pre.0", git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_primitives = { version = "=0.29.0-pre.0", git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_protocol = { version = "=0.10.0-pre.0", features = ["local-consensus"], git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_address = { version = "=0.13.0-pre.0", git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_proofs = { version = "0.29.0-pre.0", git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_transparent = { version = "=0.9.0-pre.0", default-features = false, features = ["transparent-inputs"], git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zcash_script = "0.4"
pczt = { version = "0.7", features = ["orchard", "sapling", "transparent", "signer", "prover", "tx-extractor"], git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
secp256k1 = "0.29"
orchard = "=0.15.0-pre.2"
sapling = { package = "sapling-crypto", version = "0.7" }
zip321 = { version = "0.8", git = "https://github.com/zcash/librustzcash.git", rev = "8e6864a3c67cab3c64a052dd20f83c553662e8b2" }
zip32 = "0.2"
shardtree = "0.6"
incrementalmerkletree = "0.8"

# Optional chain-plane backend. The `zinder` cargo feature on zally-chain pulls these
# crates from a pinned git revision so the wallet integration tracks the Zinder typed-
# client surface directly.
zinder-client = { version = "0.1", default-features = false, git = "https://github.com/gustavovalverde/zinder", rev = "2a4b982a58ada389eeb7da55ae9adb2452ac8232" }
zinder-core = { version = "0.1", default-features = false, git = "https://github.com/gustavovalverde/zinder", rev = "2a4b982a58ada389eeb7da55ae9adb2452ac8232" }

# Async runtime and concurrency.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-trait = "0.1"
parking_lot = "0.12"

# Error handling and serialization.
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }

# Identifiers and BIP-39 mnemonics.
uuid = { version = "1", features = ["v4", "serde"] }
bip0039 = { version = "0.12", features = ["all-languages"] }

# Hex encoding for canonical hash text (`TxId`, `BlockHash`).
hex = "0.4"

# Cryptography and key sealing.
age = "0.10"
secrecy = "0.8"
zeroize = "1.8"
rand = "0.8"
blake2b_simd = "1.0"

# Storage.
rusqlite = { version = "0.37", features = ["bundled"] }

# Telemetry.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Test infrastructure.
proptest = "1.5"
tempfile = "3.13"


# Pinned to an unreleased librustzcash commit that carries Ironwood/NU6.3 wallet
# support and target-expiry PCZT construction. Zally's direct dependencies name
# this source explicitly, so the upstream workspace's path dependencies retain
# one type family. Do not turn these into global patches: Zinder uses released
# lower-level crates, which must remain separately resolvable. See ADR-0006.
# The remaining patches mirror the upstream temporary source requirements.
[patch.crates-io]
orchard = { git = "https://github.com/zcash/orchard", rev = "475ef0ff77d45aebff93cb039d639250d82518a3" }
# Carries the anchor-retention shardtree APIs, retained-checkpoint pruning fix,
# and exact checkpoint truncation fix until those fixes are released upstream.
shardtree = { git = "https://github.com/gustavovalverde/incrementalmerkletree", rev = "48b5297872f9c321e7d7e65b803132362035c4ee" }
incrementalmerkletree = { git = "https://github.com/gustavovalverde/incrementalmerkletree", rev = "48b5297872f9c321e7d7e65b803132362035c4ee" }
