[package]
name = "zally-core"
version = "0.1.0"
description = "Zally domain types: Network, Zatoshis, BlockHeight, AccountId, and error vocabulary"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
serde = ["dep:serde", "uuid/serde"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true
uuid = { workspace = true }
zcash_protocol.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
