[package]
name = "zally-storage"
version = "0.1.0"
description = "Zally wallet storage trait and SQLite implementation"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
serde = ["dep:serde", "zally-core/serde", "zally-keys/serde"]

[dependencies]
async-trait.workspace = true
rand.workspace = true
rusqlite.workspace = true
secrecy.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tracing.workspace = true
zally-core = { path = "../zally-core", version = "0.1" }
zally-keys = { path = "../zally-keys", version = "0.1" }
pczt = { workspace = true }
incrementalmerkletree.workspace = true
orchard.workspace = true
sapling.workspace = true
shardtree.workspace = true
zcash_client_backend = { workspace = true, features = ["orchard", "transparent-inputs", "pczt"] }
zcash_client_sqlite = { workspace = true, features = ["orchard", "transparent-inputs", "serde"] }
zcash_keys = { workspace = true, features = ["orchard", "sapling", "transparent-inputs", "unstable"] }
zcash_primitives.workspace = true
zcash_proofs.workspace = true
zcash_protocol.workspace = true
zcash_script.workspace = true
zcash_transparent.workspace = true
zip32.workspace = true
uuid = { workspace = true, features = ["v5"] }

[dev-dependencies]
hex.workspace = true
prost = "0.14"
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
